--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,28 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap");
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  height: 100vh;
+  margin: 0 auto;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 60px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-header .link h1 {
+  font-size: 25px;
+  font-family: "Quicksand", sans-serif;
+  text-decoration: none;
   color: white;
 }
 
@@ -28,11 +30,32 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Excedent {
+  background-color: #77867f;
+  font-family: "Quicksand", sans-serif;
+  color: white;
+  display: flex;
+  height: calc(100vh - 60px - 5vh);
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.App-footer {
+  display: flex;
+  font-family: "Quicksand", sans-serif;
+  background-color: #282c34;
+  color: white;
+  height: 5vh;
+  justify-content: center;
+  align-items: center;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  color: grey;
 }
